<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pad_numeric_background_color"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view_display"
        style="@style/DisplayTextStyle"
        android:textColor="@color/primary_dark"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_7"
                    style="@style/PadButtonStyle"
                    android:text="@string/number7" />

                <Button
                    android:id="@+id/btn_8"
                    style="@style/PadButtonStyle"
                    android:text="@string/number8" />

                <Button
                    android:id="@+id/btn_9"
                    style="@style/PadButtonStyle"
                    android:text="@string/number9" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_4"
                    style="@style/PadButtonStyle"
                    android:text="@string/number4" />

                <Button
                    android:id="@+id/btn_5"
                    style="@style/PadButtonStyle"
                    android:text="@string/number5" />

                <Button
                    android:id="@+id/btn_6"
                    style="@style/PadButtonStyle"
                    android:text="@string/number6" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_1"
                    style="@style/PadButtonStyle"
                    android:text="@string/number1" />

                <Button
                    android:id="@+id/btn_2"
                    style="@style/PadButtonStyle"
                    android:text="@string/number2" />

                <Button
                    android:id="@+id/btn_3"
                    style="@style/PadButtonStyle"
                    android:text="@string/number3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_0"
                    style="@style/PadButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/number0" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_handler"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_open"
                style="@style/PadButtonStyle"
                android:background="@color/pad_advanced_background_color"
                android:text="@string/open" />

            <Button
                android:id="@+id/btn_close"
                style="@style/PadButtonStyle"
                android:background="@color/pad_button_ripple_color"
                android:text="@string/close" />

            <Button
                android:id="@+id/btn_change"
                style="@style/PadButtonStyle"
                android:background="@color/primary"
                android:text="@string/change" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
